--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,11 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Focus</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="/">Home</a>
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <% if current_user %>
+        <% if current_user.present? %>
             <li class="nav-item active">
               <a class="nav-link" href="/bookmarks">Bookmarks <span class="sr-only">(current)</span></a>
             </li>
@@ -22,16 +19,12 @@
               <%= link_to "Logout", signout_path, method: :delete, class: 'nav-link' %>
             </li>
         <% else %>
-            <li class="nav-item">
-              <%= link_to 'Signin', '/auth/google_oauth2', class: 'nav-link' %>
-            </li>
+          <li class="nav-item">
+            <%= link_to 'Signin', '/auth/google_oauth2', class: 'nav-link' %>
+          </li>
         <% end %>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/feedback">Feedback</a>
-        </li>
       </ul>
-      <% if current_user %>
+      <% if current_user.present? %>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search term" id="search-card">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
