--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="jumbotron">
-    <h1>Exchangerateapp</h1>
+    <h1>Exchange Rate App</h1>
     <p>Login using Google OAuth</p>
     <p>Calculate and store exchange rates</p>
   </div>
