--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,3 +1,16 @@
 <div class="jumbotron">
   <%= "Welcome #{current_user.name}!!!" %>
 </div>
+
+<div class="container">
+  <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Dropdown button
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <% @currencies.each do |currency| %>
+        <a class="dropdown-item" href="#">currency</a>
+      <% end %>
+    </div>
+  </div>
+</div>
