--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,3 +1,41 @@
+<% content_for :js_init do %>
+  //line
+  var ctxL = document.getElementById("lineChart").getContext('2d');
+  var myLineChart = new Chart(ctxL, {
+    type: 'line',
+    data: {
+      labels: ["January", "February", "March", "April", "May", "June", "July"],
+      datasets: [{
+          label: "My First dataset",
+          data: [65, 59, 80, 81, 56, 55, 40],
+          backgroundColor: [
+            'rgba(105, 0, 132, .2)',
+          ],
+          borderColor: [
+            'rgba(200, 99, 132, .7)',
+          ],
+          borderWidth: 2
+        },
+        {
+          label: "My Second dataset",
+          data: [28, 48, 40, 19, 86, 27, 90],
+          backgroundColor: [
+            'rgba(0, 137, 132, .2)',
+          ],
+          borderColor: [
+            'rgba(0, 10, 130, .7)',
+          ],
+          borderWidth: 2
+        }
+      ]
+    },
+    options: {
+      responsive: true
+    }
+  });
+<% end %>
+
+
 <div class='jumbotron'>
   <%= "Welcome #{current_user.name}!!!" %>
 </div>
@@ -34,3 +72,8 @@
     </div>
   <% end %>
 </div>
+
+
+<%= content_tag :div, "", id: "ex-graph", data: {rates: @rates} %>
+
+
