--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,5 +1,5 @@
 <div class='jumbotron'>
-  <%= "Welcome #{current_user.name}!!!" %>
+  <%= "Welcome #{@user.name}!!!" %>
 </div>
 
 <div class='jumbotron'>
@@ -35,6 +35,34 @@
 </div>
 
 <% if @rates.any? %>
-  <h1> Exchange Rate over time </h1>
-  <%= content_tag :div, "", id: "ex-graph", data: {rates: @rates} %>
+  <div class='jumbotron'>
+    <h1> Exchange Rate over time </h1>
+    <%= content_tag :div, "", id: "ex-graph", data: {rates: @rates} %>
+  </div>
 <% end %>
+
+<div class='jumbotron'>
+  <h1> Calculations </h1>
+  <table class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Base Amount</th>
+        <th scope="col">Target Amount</th>
+        <th scope="col">Rate</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @calculations.each_with_index do |calc, index| %>
+        <tr>
+        <th scope="row">
+          <%= index+1 %>
+        </th>
+        <td><%= render_money(calc.base_amount, 'iso_code') %></td>
+        <td><%= render_money(calc.target_amount, 'iso_code') %></td>
+        <td><%= calc.exchange_rate %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
