--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class='jumbotron'>
   <%= form_tag(
-  users_calculate_exchange_rates_path,
+  calculate_exchange_rates_path,
   method: :post,
   class: 'form-horizontal'
   ) do |f| %>
@@ -22,7 +22,8 @@
       <div>
         <%= select_tag 'currency',
             options_for_select(
-              @currencies
+              @currencies,
+              params[:currency]
             ),
             style: 'class="dropdown-menu"'
         %>
@@ -34,35 +35,37 @@
   <% end %>
 </div>
 
-<% if @rates.any? %>
+<% if @rates.present? %>
   <div class='jumbotron'>
     <h1> Exchange Rate over time </h1>
     <%= content_tag :div, "", id: "ex-graph", data: {rates: @rates} %>
   </div>
 <% end %>
 
-<div class='jumbotron'>
-  <h1> Calculations </h1>
-  <table class="table table-striped table-dark">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Base Amount</th>
-        <th scope="col">Target Amount</th>
-        <th scope="col">Rate</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @calculations.each_with_index do |calc, index| %>
+<% if @calculations.present? %>
+  <div class='jumbotron'>
+    <h1> Previous Calculations </h1>
+    <table class="table table-striped table-dark">
+      <thead>
         <tr>
-        <th scope="row">
-          <%= index+1 %>
-        </th>
-        <td><%= render_money(calc.base_amount, 'iso_code') %></td>
-        <td><%= render_money(calc.target_amount, 'iso_code') %></td>
-        <td><%= calc.exchange_rate %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+          <th scope="col">#</th>
+          <th scope="col">Base Amount</th>
+          <th scope="col">Target Amount</th>
+          <th scope="col">Rate</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @calculations.each_with_index do |calc, index| %>
+          <tr>
+          <th scope="row">
+            <%= index+1 %>
+          </th>
+          <td><%= render_money(calc.base_amount, 'iso_code') %></td>
+          <td><%= render_money(calc.target_amount, 'iso_code') %></td>
+          <td><%= calc.exchange_rate %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+<% end %>
